Resolved #46; changed overall link colour to reflect required contrast

--- a/wp-open-data-toronto/style.css
+++ b/wp-open-data-toronto/style.css
@@ -431,7 +431,7 @@ ul, li{
     padding: 0;
 }
 a{
-    color: #155687;
+    color: #124fcb;
 }
 .code{
 
